--- a/.env
+++ b/.env
@@ -70,8 +70,8 @@ GOOGLE_DRIVE_FOLDER_ID=1dD8C1e1hkcCPdtlqA3nsxJYWVvilV5Io
 # ================================
 # DISCORD BOT INTEGRATION
 # ================================
-DISCORD_BOT_TOKEN=MTM4NzM5OTk2OTk5NjE0ODgwNg.GSq2XG.YfPI8mJhHgj6-FbSKU_JRHktViN94CQXyD2b8Y
-DISCORD_GUILD_ID=1387399969996148806
+DISCORD_BOT_TOKEN=MTM5Mjc4MjI0MjcxOTQ2NTUxMg.GXzfk4.Tl3EWDSTw8hVeCfVBMfSs5r3XHy9AGHgNyWlVY
+DISCORD_GUILD_ID=1387401942254358588
 DISCORD_CHANNEL_ID=1387401942254358588
 
 # ================================
