--- a/package.json
+++ b/package.json
@@ -672,6 +672,7 @@
     "pure-rand": "^6.1.0",
     "qs": "^6.13.0",
     "queue-microtask": "^1.2.3",
+    "railway": "^2.0.17",
     "randombytes": "^2.1.0",
     "range-parser": "^1.2.1",
     "raw-body": "^2.5.2",
