🔧 Debug Vercel build - check directory structure
- Add debugging ls commands to see directory structure
- Use --prefix instead of cd for npm commands
- Verify frontend directory exists in build environment

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && npm ci && npm run build",
+  "buildCommand": "ls -la && ls -la frontend/ && npm ci --prefix frontend && npm run build --prefix frontend",
   "outputDirectory": "frontend/dist",
-  "installCommand": "cd frontend && npm ci",
+  "installCommand": "ls -la && npm ci --prefix frontend",
   "framework": "vite",
   "rewrites": [
     {
