🔧 Fix Vercel build - use npm install instead of npm ci
- Change vercel.json to use npm install (works without package-lock.json)
- Remove debug commands for cleaner build output
- This should resolve the missing lockfile issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
-  "buildCommand": "ls -la && ls -la frontend/ && npm ci --prefix frontend && npm run build --prefix frontend",
+  "buildCommand": "npm install --prefix frontend && npm run build --prefix frontend",
   "outputDirectory": "frontend/dist",
-  "installCommand": "ls -la && npm ci --prefix frontend",
+  "installCommand": "npm install --prefix frontend",
   "framework": "vite",
   "rewrites": [
     {
