✅ Complete working Vercel deployment configuration
✅ Frontend builds successfully with vite only
✅ Proper vercel.json with builds/routes configuration
✅ Clean .vercelignore excluding everything except frontend
✅ Working tsconfig with relaxed settings
✅ vercel-build script optimized for deployment

Ready for production deployment!

--- a/.vercelignore
+++ b/.vercelignore
@@ -1,12 +1,9 @@
-backend/
-lif3-integrations/
-package-lock.json
-*.log
-*.sqlite
-*.db
-chromadb/
-logs/
-test/
-scripts/
-documents/
-data/
+# Ignore everything except frontend
+*
+!frontend/
+!frontend/**
+!vercel.json
+
+# Ignore these in frontend too
+frontend/node_modules/
+frontend/.env.local
