--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,48 +1,31 @@
-# Multi-stage build for Railway deployment
-FROM node:18-alpine AS builder
+# Render.com deployment - backend only
+FROM node:18-alpine
 
 WORKDIR /app
 
-# Copy package files
+# Copy only backend package files
 COPY package*.json ./
 
-# Install all dependencies (including dev for build)
-RUN npm ci
+# Install only backend dependencies
+RUN npm ci --only=production
 
-# Copy source code
+# Copy backend source code
 COPY . .
 
 # Build the application
 RUN npm run build
 
-# Production stage
-FROM node:18-alpine AS production
-
-WORKDIR /app
-
-# Copy package files for production install
-COPY package*.json ./
-
-# Install only production dependencies
-RUN npm ci --only=production && npm cache clean --force
-
-# Copy built application
-COPY --from=builder /app/dist ./dist
-
 # Create non-root user
-RUN addgroup -g 1001 -S nodejs
-RUN adduser -S nestjs -u 1001
-
-# Change ownership
+RUN addgroup -g 1001 -S nodejs && adduser -S nestjs -u 1001
 RUN chown -R nestjs:nodejs /app
 USER nestjs
 
-# Expose port
-EXPOSE 3001
+# Expose port (Render assigns this automatically)
+EXPOSE 10000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-  CMD curl -f http://localhost:3001/health || exit 1
+  CMD curl -f http://localhost:10000/health || exit 1
 
 # Start the application
 CMD ["npm", "run", "start:prod"]
