--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,9 @@ services:
     name: lif3-backend
     env: node
     plan: free
-    buildCommand: cd backend && npm ci && npm run build
+    buildCommand: rm -f package.json package-lock.json && cd backend && npm install && npm run build
     startCommand: cd backend && npm run start:prod
     healthCheckPath: /health
-    rootDir: backend
     envVars:
       - key: NODE_ENV
         value: production
