Integrate AI agent and MCP framework modules
Added the AI agent module to the NestJS backend, including controller, service, and module files, and updated app.module.ts to import the new module. Introduced the MCP framework with integration, event dispatcher, data sync, and server manager services, as well as Asana, Notion, and Sentry MCP server implementations. Enhanced backend configuration for environment-based database connections and improved main bootstrap logic. Added CLI tools, setup scripts, and documentation for LIF3 AI integration, along with new test and workflow files for the lif3-agent.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.0",
     "@modelcontextprotocol/server-filesystem": "^2025.7.1",
+    "@sentry/nextjs": "^9.39.0",
     "abbrev": "^1.1.1",
     "abort-controller": "^3.0.0",
     "accepts": "^2.0.0",
